# Beaconing-detection-system

./: .gitattributes  .gitignore  LICENSE  README.md  app.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: tests.yml
data/operational/: example_score.csv  example_train.csv
data/operational/fixtures/: ipfix_information_elements_ipv6.csv  netflow_common_aliases.csv  netflow_demo.csv  netflow_header_only.csv  netflow_invalid_port.csv  netflow_iso_timestamps.csv  netflow_missing_required.csv  netflow_negative_duration.csv  netflow_parity.csv  netflow_transport_protocol.csv  netflow_unsupported_protocol.csv
data/public/: README.md
data/synthetic/: sample_events.csv
demo-app/: README.md  package.json
demo-app/app/: globals.css  layout.js  page.js
demo-app/app/workspace/: page.js
demo-app/components/: demo-app.js  demo-overview.js  demo-workspace-diagnostics.js  demo-workspace-explanation.js  demo-workspace-files.js  demo-workspace-results.js  demo-workspace.js  workspace-common.js
demo-app/lib/: demo-data-model.js  load-demo-data.js  use-workspace-result.js
demo-app/public/: demo-data.json
docs/: current_findings.md  demo_script.md  experiment_log.md  how_to_run_experiments.md  live_demo_service.md  operational_demo.html  operational_demo.md  operational_demo_data.js  operational_example.md  operational_system.md  project_walkthrough.md  public_dataset_plan.md  report_draft.md  report_outline.md  sequence_feature_plan.md
results/tables/: README.md
scripts/: build_operational_demo.py
src/beacon_detector/: __init__.py  demo_payload.py  demo_scenarios.py
tests/: test_anomaly_detector.py  test_core_models.py  test_ctu13_adapter.py  test_ctu13_diagnostics.py  test_ctu13_supervised.py  test_ctu_native_features.py  test_data_stage1.py  test_demo_service.py  test_evaluation.py  test_feature_cache.py  test_feature_extraction.py  test_feature_improvement.py  test_final_story_artifacts.py  test_flow_builder.py  test_lof_tuning.py  test_minimum_evidence.py  test_ops_pipeline.py  test_result_export.py  test_rf_diagnostics.py  test_rf_signal_study.py  test_rule_detector.py  test_shortcut_stress.py  test_statistical_detector.py  test_supervised_ablation.py  test_supervised_detector.py  test_supervised_threshold.py  test_supervised_validation.py
(+78 files in other folders)
