[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beacon-detector"
version = "0.1.0"
description = "Flow-level behavioural beaconing detection experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "data",
    "notebooks",
    "results",
]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
