[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beacon-detector"
version = "0.1.0"
description = "Flow-level behavioural beaconing detection experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib==3.9.2",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "scikit-learn==1.5.2",
]

[project.scripts]
beacon-ops = "beacon_detector.cli.ops:main"

[project.optional-dependencies]
dev = [
    "ruff==0.8.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "data",
    "notebooks",
    "results",
]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
